added gradle wrapper to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,12 @@ google-services.json
 
 # Android Profiling
 *.hprof
+
+# Gradle Wrapper
+/gradle/wrapper/gradle-wrapper.jar
+/gradle/wrapper/gradle-wrapper.properties
+/gradlew
+/gradlew.bat
+
+# Apple
+.DS_Store
